--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -349,15 +349,15 @@ html {
 
 .wrapper button {
   font-size: 1.8em;
-  height: 2.2em;
-  width: 2.2em;
-  background-color: #ffffff;
+  height: 1.5em;
+  width: 1.5em;
+  background-color: #212f3d;
   position: absolute;
   margin: auto;
   top: 0;
   bottom: 0;
   border: none;
-  color: #0a69ed;
+  color: #ffc800;
   box-shadow: 0 0 1em rgba(1, 17, 39, 0.25);
   cursor: pointer;
   border-radius: 50%;
@@ -368,7 +368,6 @@ button#next {
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
-  background-color: white;
   border: 1px solid #ccc;
   border-radius: 50%;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
@@ -379,7 +378,6 @@ button#prev {
   left: 20px;
   top: 50%;
   transform: translateY(-50%);
-  background-color:white;
   border: 1px solid #ccc;
   border-radius: 50%;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
