--- a/checkoutpage/style_cart.css
+++ b/checkoutpage/style_cart.css
@@ -180,7 +180,7 @@ img {
 }
 .wishlist-item img,
 .cart-item img {
-  width: 120px;
+  width: 150px;
   height: auto;
   border-radius: 8px;
   margin-right: 15px;
@@ -194,23 +194,42 @@ img {
   margin: 5px 0;
 }
 
-.cart-details button {
-  align-items: right;
-  background-color: #fff;
-  color: black;
-  border: none;
-  padding: 1px 3px;
-  font-size: 7px;
-  text-align: center;
-  border-radius: 50%;
-  border-style: solid;
-  border-color: black;
-  border-width: 1px;
-  cursor: pointer;
+.cart-details form {
+  display: inline-block; /* Align buttons horizontally */
+  margin-right: 10px; /* Add spacing between buttons */
 }
 
-.cart-details button:hover {
-  background-color: #ff0000;
+.cart-details .buttons-container {
+  display: flex; /* Use flexbox for horizontal alignment */
+  gap: 10px; /* Space between buttons */
+  margin-top: 10px; /* Space above buttons */
+}
+
+
+.cart-details form button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 15px;
+  font-size: 0.9rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.cart-details form button:hover {
+  background-color: #0056b3;
+  transform: scale(1.05);
+}
+
+.cart-details form .remove-btn {
+  background-color: #dc3545;
+}
+
+.cart-details form .remove-btn:hover {
+  background-color: #c82333;
 }
 
 .checkout-summary {
@@ -252,6 +271,8 @@ img {
 
 .checkout-btn:hover {
   background-color: #218838;
+  transform: scale(1.05);
+
 }
 
 .paypal-btn {
@@ -261,6 +282,7 @@ img {
 
 .paypal-btn:hover {
   background-color: #005ea6;
+  transform: scale(1.05);
 }
 
 .discount-code {
@@ -344,7 +366,7 @@ img {
     }
   }
   /* top navbar */
-  
+
   /* navbar */
   #navbar {
     background-color: #e5e7e9;
@@ -385,7 +407,7 @@ img {
     color: white;
     transition: 0.5s ease;
   }
-  
+
   #search input {
     border-radius: 50px;
     border: none;
@@ -406,7 +428,7 @@ img {
     color: gray;
   }
   /* navbar */
-  
+
   /* home content */
   .home {
     width: 100%;
@@ -466,7 +488,7 @@ img {
     color: black;
     border: none;
   }
-  
+
   @media screen and (max-width: 1200px) {
     .home {
       height: 90vh;
@@ -492,7 +514,7 @@ img {
       font-size: 36px;
     }
   }
-  
+
   /* product cards */
   #product-cards {
     margin-top: 100px;
@@ -533,7 +555,7 @@ img {
       font-size: 15px;
     }
   }
-  
+
   /* other cards */
   #other-cards {
     margin-top: 30px;
@@ -577,7 +599,7 @@ img {
     border: none;
     cursor: pointer;
   }
-  
+
   @media screen and (max-width: 1000px) {
     #other-cards .card h3 {
       margin-top: 5px;
@@ -598,7 +620,7 @@ img {
     }
   }
   /* other cards */
-  
+
   /* banner */
   .banner {
     margin-top: 60px;
@@ -685,7 +707,7 @@ img {
     }
   }
   /* banner */
-  
+
   /* other cards */
   #other {
     margin-top: 50px;
@@ -708,7 +730,7 @@ img {
     font-weight: bold;
   }
   /* other cards */
-  
+
   /* offer */
   #offer {
     margin-top: 100px;
@@ -718,7 +740,7 @@ img {
     color: black;
   }
   /* offer */
-  
+
   /* newslater */
   #newslater {
     margin-top: 100px;
@@ -767,7 +789,7 @@ img {
     }
   }
   /* newslater */
-  
+
   /* footer */
   #footer {
     padding: 0 0 30px 0px;
@@ -865,7 +887,7 @@ img {
     color: #ffc800;
   }
   /* footer */
-  
+
   html {
     scroll-behavior: smooth;
   }
@@ -879,7 +901,7 @@ img {
     text-align: center;
     line-height: 50px;
   }
-  
+
   /* login */
   #login {
     width: 65%;
@@ -944,7 +966,7 @@ img {
     }
   }
   /* login */
-  
+
   /* about */
   #about {
     margin-top: 30px;
@@ -963,7 +985,7 @@ img {
     cursor: pointer;
   }
   /* about */
-  
+
   /* contact */
   #contact {
     margin-top: 50px;
@@ -1004,4 +1026,3 @@ img {
     color: white;
   }
   /* contact */
-  
