--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -10,6 +10,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
 }
@@ -349,7 +350,6 @@ html {
 
 /* about */
 #about {
-  margin-top: 30px;
   display: flex;
   flex-direction: column;
 }
