--- a/assests/css/style_orders.css
+++ b/assests/css/style_orders.css
@@ -26,3 +26,11 @@ h2 {
 .btn-primary:hover {
     background-color: #004494;
 }
+
+.container {
+    background: rgba(255, 255, 255, 0.9); /* White background with slight transparency */
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
