--- a/Landing-Page/assests/css/style.css
+++ b/Landing-Page/assests/css/style.css
@@ -224,6 +224,13 @@
   text-shadow: 1px 1px 1px black;
   border-bottom: 2px solid #e5e7e9;
 }
+#product-cards img {
+  object-fit: contain;
+ height: 250px;
+ width: 100%;
+ border-top-left-radius: 10px;
+ border-top-right-radius: 10px;
+}
 #product-cards .card h3 {
   font-size: 20px;
   color: black;
