--- a/productspage/style.css
+++ b/productspage/style.css
@@ -59,6 +59,71 @@ body {
   width: 100%;
 }
 
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-img-top {
+    object-fit: contain;
+    height: 200px;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 200px;
+}
+
+.card-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.card-text {
+    font-size: 1rem;
+}
+
+.card-footer {
+    margin-top: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-primary {
+    width: 100%;
+}
+.product-container {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 75%;
+  margin: auto;
+}
+.product-image {
+  border-radius: 10px;
+  max-width: 100%;
+  height: 500px;
+  object-fit: contain;
+}
+.review-box {
+  background: #f8f9fa;
+  padding: 15px;
+  border-radius: 10px;
+}
+.star-rating i {
+  cursor: pointer;
+}
+.product-description {
+  background: #f8f9fa;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
 /* top navbar */
 .top-navbar {
   display: flex;
