--- a/Landing-Page/assests/css/style.css
+++ b/Landing-Page/assests/css/style.css
@@ -216,29 +216,53 @@
 }
 
 /* product cards */
-#product-cards {
-  margin-top: 100px;
-}
+
 #product-cards h1 {
   color: #e5e7e9;
   text-shadow: 1px 1px 1px black;
   border-bottom: 2px solid #e5e7e9;
 }
 #product-cards img {
-  object-fit: contain;
+ object-fit: contain;
  height: 250px;
  width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
 }
+#product-cards .card {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 300px; 
+  height: 400px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  align-items: center;
+  text-align: center;
+  overflow: hidden; 
+}
 #product-cards .card h3 {
-  font-size: 20px;
+  font-size: 18px;
   color: black;
+  text-align: center;
+  padding: 0 10px;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  display: -webkit-box;
+  -webkit-line-clamp: 2; 
+  -webkit-box-orient: vertical;
 }
 #product-cards .card p {
   font-size: 12px;
   margin-top: 5px;
   color: black;
+}
+
+#product-cards .card h3,
+#product-cards .card p,
+#product-cards .card h2 {
+  flex-grow: 1; 
 }
 .star i {
   margin-left: 5px;
